# polyreduce

./: pyproject.toml  test.py
examples/: 3color.json  3sat.json  clique.json  hamiltonian_cycle.json  independent_set.json  knapsack.json  sat.json  set_cover.json  subset_sum.json  vertex_cover.json
src/polyreduce/: __init__.py  problems.py  reductions.py  verification.py
src/polyreduce.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/polyreduce/cli/: defaults.py  loaders.py  main.py  registry.py  runners.py
src/polyreduce/core/: __init__.py  problems.py  reduction.py  sat_solver.py
test/: test_3sat_to_3col_satisfiable_instance.py  test_3sat_to_clique_correctness.py  test_3sat_to_sat_instance.py  test_basic_reduction.py  test_clique_to_independent_set.py  test_clique_to_sat.py  test_graph_instance.py  test_hamiltonian_cycle_to_sat.py  test_independent_set_to_sat.py  test_independent_set_to_vertex_cover.py  test_knapsack_to_sat.py  test_reduction_3sat_to_clique.py  test_reduction_3sat_to_hamiltonian_cycle.py  test_reduction_3sat_to_subset_sum.py  test_reduction_3sat_to_three_color.py  test_reduction_clique_to_independent_set.py  test_reduction_independent_set_to_vertex_cover.py  test_reduction_sat_to_3sat.py  test_reduction_subset_sum_to_knapsack.py  test_reduction_vertex_cover_to_clique.py  test_reduction_vertex_cover_to_set_cover.py  test_sat_instance_sanity.py  test_sat_module.py  test_set_cover_to_sat.py  test_subset_sum_to_sat.py  test_three_color_to_sat.py  test_vertex_cover_to_clique.py  test_vertex_cover_to_sat.py
(+57 files in other folders)
